src/test/resources/de/feu/ps/bridges/serialization/semantic_errors/too_many_rows.bgs
FIELD
11 x 26 | 2

ISLANDS
( 0, 0 | 1 )
( 0, 5 | 1 )

BRIDGES
( 0, 1 | false )
